Version (CVS)
-------------


XML:	Added support for restriction in simpleContent and enhanced complexType support
	(Arnaud <blandin@intalio.com>)	

XML: 	Added the command-line option '-nomarshall' which aims at preventing the
	generation of the marshalling framework specific methods (marshall, unmarshall, validate)
	(Arnaud <blandin@intalio.com>)

XML:   Added setNSPrefixAtRoot method. When used in conjunction with setNamespaceMapping this
	will insert the namepsace declarations at the root node.
	(Andrew Fawcett, andrew.fawcett@coda.com)

XML:    Fixed collection handling for introspected class. 
        (Sebastien Gignoux <gignoux@intalio.com>)

XML:    Bug fix for using addXxx methods.
        (Fix submitted by Michael Thyen <mthyen@excite.com>)

XML:    Bug fix in the handling of 'Map' collection. Now we use the abstract
        'Map' interface rather than 'HashMap'.
        (Fix submitted by Ron Smith <rsmith7209@yahoo.com>)

XML:    Added some logic to avoid unnecessary use of 'xsi:type' when
        marshalling. The logic check if Castor is able to find the proper java
        class to instantiate from the mapping file information.
        (Sebastien Gignoux <gignoux@intalio.com>) 

XML:    Solved a performance bug for unmarshalling of primitive type. We don't
        try anymore to generate a Class Descriptor for primitive type as we know
        that not only it fails but it is deadly slow (due to getMethods()
        call). Now, unmarhsalling speed is nearly only bounded by the speed of
        the parser.
        (Sebastien Gignoux <gignoux@intalio.com>) 

XML & JDO:
	Regenerated data objects in the org.exolab.castor.mapping.xml package,
	using an updated version of schema (Nov 2000).

XML & JDO:
        Now the return type of get-method must be a super-class of or equal to
	the class declared in mapping.xml (was: sub-class).
	Note, that now "arraylist" can be used as a value of "collection"
	attribute in mapping.xml 
